# headroom

./: .gitignore  Cargo.toml  IPC.md  README.md  flake.nix
contrib/desktop/: headroom-gui.desktop
contrib/systemd/: headroom.service
crates/headroom-cli/: Cargo.toml
crates/headroom-cli/src/: main.rs  tui.rs
crates/headroom-client/: Cargo.toml  README.md
crates/headroom-client/src/: client.rs  lib.rs
crates/headroom-core/: Cargo.toml
crates/headroom-core/benches/: app_level.rs
crates/headroom-core/src/: agc.rs  app_level.rs  error.rs  lib.rs  meters.rs  profile.rs  profile_store.rs  profile_watcher.rs  routing.rs  runtime.rs  state.rs
crates/headroom-core/src/ipc/: broadcast.rs  connection.rs  mod.rs  ops.rs  server.rs
crates/headroom-core/src/pw/: command.rs  filter.rs  metadata.rs  mod.rs  registry.rs  sink.rs  tap.rs
crates/headroom-core/tests/: shipped_profiles.rs
crates/headroom-dsp/: Cargo.toml  README.md
crates/headroom-dsp/benches/: layer_a.rs
crates/headroom-dsp/src/: agc.rs  compressor.rs  delay.rs  envelope.rs  level_envelopes.rs  lib.rs  limiter.rs  oversample.rs  sliding_max.rs  util.rs
crates/headroom-gui/: Cargo.toml  README.md
crates/headroom-gui/src/: app.rs  io.rs  main.rs
crates/headroom-ipc/: Cargo.toml  README.md
crates/headroom-ipc/src/: codec.rs  error.rs  lib.rs  proto.rs
crates/pipewire-filter/: Cargo.toml
crates/pipewire-filter/src/: error.rs  lib.rs
docs/: ipc-by-hand.md
nix/: nixos-module.nix
profiles/: broadcast-14.toml  bypass-all.toml  commute.toml  default.toml  gaming.toml  movie.toml  music.toml  night.toml  party.toml  podcast.toml  quiet-hours.toml  speech.toml  spike-protection.toml  transparent.toml
