[package]
name = "headroom-client"
description = "automatic loudness and per-app volume control (pipewire)"
version.workspace = true
edition.workspace = true
license = "MPL-2.0"
homepage.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
headroom-ipc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
# reserved for an eventual tokio-based async client
async = []
