[package]
name = "headroom-ipc"
description = "automatic loudness and per-app volume control (pipewire)"
version.workspace = true
edition.workspace = true
license = "MPL-2.0"
homepage.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
